--- a/apps/lisa/src/index.html
+++ b/apps/lisa/src/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="manifest" href="manifest.webmanifest">
+    <link href="apiAi.js">
   <meta name="theme-color" content="#1976d2">
 </head>
   <body>
